--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"ci:version": "changeset version && node .github/scripts/cleanup-examples-changesets.mjs && pnpm install --no-frozen-lockfile"
 	},
 	"devDependencies": {
-		"@baseai/eslint-config": "workspace:*",
+		"@langbase/eslint-config": "workspace:*",
 		"@changesets/cli": "^2.27.5",
 		"@types/node": "^20.11.24",
 		"eslint": "^8.57.0",
