--- a/packages/langbase/package.json
+++ b/packages/langbase/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "langbase",
-	"version": "0.0.1",
+	"version": "0.0.0",
 	"license": "Apache-2.0",
 	"sideEffects": false,
 	"main": "./dist/index.js",
@@ -33,11 +33,14 @@
 		"zod-validation-error": "^3.3.0"
 	},
 	"devDependencies": {
-		"@baseai/eslint-config": "workspace:*",
-		"@baseai/tsconfig": "workspace:*",
+		"@edge-runtime/vm": "^4.0.1",
+		"@langbase/eslint-config": "workspace:*",
+		"@langbase/tsconfig": "workspace:*",
 		"@playwright/test": "^1.44.1",
 		"@types/node": "^20.11.24",
+		"@vitejs/plugin-react": "^4.3.1",
 		"eslint": "^8.57.0",
+		"jsdom": "^24.1.0",
 		"tsup": "^8.0.2",
 		"typescript": "^5.3.3",
 		"vitest": "1.6.0"
