--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"version-packages": "changeset version",
 		"clean": "turbo clean && rm -rf node_modules",
 		"format": "prettier --write \"**/*.{ts,tsx,md}\"",
-		"release": "turbo build --filter=docs^... && changeset publish",
+		"release": "turbo build && changeset publish",
+		"releaseDocs": "turbo build --filter=docs^... && changeset publish",
 		"releasex": "turbo build && changeset publish",
 		"prettier-check": "prettier --check \"**/*.{js,ts,tsx,md,mdx}\"",
 		"prettier-fix": "prettier --write \"**/*.{js,ts,tsx,md,mdx}\"",
