--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -6,6 +6,6 @@
 	"linked": [],
 	"access": "public",
 	"baseBranch": "main",
-	"updateInternalDependencies": "patch",
-	"ignore": ["@langbase/docs"]
+	"updateInternalDependencies": "patch"
+	// "ignore": ["@langbase/docs"]
 }
