--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.416.0",
     "mxcn": "^2.0.0",
     "next": "14.2.5",
+    "openai": "^4.53.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0",
