--- a/packages/langbase/package.json
+++ b/packages/langbase/package.json
@@ -29,6 +29,7 @@
 	},
 	"dependencies": {
 		"dotenv": "^16.4.5",
+		"openai": "^4.53.0",
 		"zod": "^3.23.8",
 		"zod-validation-error": "^3.3.0"
 	},
