--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
 		"changeset": "changeset",
 		"publint": "turbo publint",
 		"type-check": "turbo type-check",
-		"version-packages": "changeset version && node .github/scripts/cleanup-examples-changesets.mjs && pnpm install --no-frozen-lockfile",
-		"clean": "turbo clean && rm -rf node_modules",
+		"version-packages": "changeset version",
+		"clean": "turbo clean",
+		"xclean": "turbo clean && rm -rf node_modules",
 		"format": "prettier --write \"**/*.{ts,tsx,md}\"",
-		"release": "turbo build && changeset publish",
+		"release": "turbo clean && turbo build && changeset publish",
 		"releaseDocs": "turbo build --filter=docs^... && changeset publish",
 		"releasex": "turbo build && changeset publish",
 		"prettier-check": "prettier --check \"**/*.{js,ts,tsx,md,mdx}\"",
