--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"type-check": "turbo type-check",
 		"version-packages": "changeset version && pnpm clean-examples && pnpm install --no-frozen-lockfile",
 		"clean": "turbo clean",
-		"xclean": "turbo clean && rm -rf node_modules",
+		"clean-all": "turbo clean && rm -rf node_modules",
 		"format": "prettier --write \"**/*.{ts,tsx,md}\"",
 		"release": "turbo clean && turbo build && changeset publish",
 		"releaseDocs": "turbo build --filter=docs^... && changeset publish",
