--- a/packages/langbase/package.json
+++ b/packages/langbase/package.json
@@ -17,7 +17,8 @@
 		"clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
 		"type-check": "tsc --noEmit",
 		"prettier-check": "prettier --check \"./**/*.ts*\"",
-		"test": "pnpm test:node && pnpm test:edge && pnpm test:ui && pnpm test:e2e",
+		"test": "pnpm test:node && pnpm test:edge",
+		"#test": "pnpm test:node && pnpm test:edge && pnpm test:ui && pnpm test:e2e",
 		"test:edge": "vitest --config vitest.edge.config.js --run",
 		"test:node": "vitest --config vitest.node.config.js --run",
 		"test:ui": "pnpm test:ui:react",
