--- a/packages/langbase/package.json
+++ b/packages/langbase/package.json
@@ -42,6 +42,8 @@
 		"@types/node": "^20.11.24",
 		"@vitejs/plugin-react": "^4.3.1",
 		"eslint": "^8.57.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.2.1",
 		"jsdom": "^24.1.0",
 		"tsup": "^8.0.2",
 		"typescript": "^5.3.3",
