--- a/packages/langbase/package.json
+++ b/packages/langbase/package.json
@@ -29,6 +29,7 @@
 		"test:ui:react:watch": "vitest --config vitest.ui.react.config.js"
 	},
 	"dependencies": {
+		"@baseai/core": "0.9.30",
 		"dotenv": "^16.4.5",
 		"openai": "^4.53.0",
 		"zod": "^3.23.8",
