--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 		"devv": "turbo dev --no-cache  --concurrency 16 --continue",
 		"ci:release": "turbo clean && turbo build && changeset publish",
 		"clean-examples": "node .github/scripts/cleanup-examples-changesets.mjs",
-		"ci:version": "changeset version && node .github/scripts/cleanup-examples-changesets.mjs && pnpm install --no-frozen-lockfile"
+		"ci:version": "changeset version && node .github/scripts/cleanup-examples-changesets.mjs && pnpm install --no-frozen-lockfile",
+		"snapshot": "node .github/scripts/release-snapshot.js"
 	},
 	"devDependencies": {
 		"@langbase/eslint-config": "workspace:*",
