--- a/examples/nodejs/package.json
+++ b/examples/nodejs/package.json
@@ -12,10 +12,10 @@
     "memory.list": "npx tsx ./examples/memory/memory.list.ts",
     "memory.delete": "npx tsx ./examples/memory/memory.delete.ts",
     "memory.retrieve": "npx tsx ./examples/memory/memory.retrieve.ts",
-    "memory.list.docs": "npx tsx ./examples/memory/memory.list.docs.ts",
-    "memory.delete.docs": "npx tsx ./examples/memory/memory.delete.docs.ts",
-    "memory.upload.doc": "npx tsx ./examples/memory/memory.upload.doc.ts",
-    "memory.retry.doc.embed": "npx tsx ./examples/memory/memory.retry.doc.embed.ts",
+    "memory.docs.list": "npx tsx ./examples/memory/memory.docs.list.ts",
+    "memory.docs.delete": "npx tsx ./examples/memory/memory.docs.delete.ts",
+    "memory.docs.upload": "npx tsx ./examples/memory/memory.docs.upload.ts",
+    "memory.docs.retry-embed": "npx tsx ./examples/memory/memory.docs.retry-embed.ts",
     "pipe.update": "npx tsx ./examples/pipes/pipe.update.ts",
     "pipe.list": "npx tsx ./examples/pipes/pipe.list.ts",
     "pipe.run": "npx tsx ./examples/pipes/pipe.run.ts",
