--- a/examples/nodejs/package.json
+++ b/examples/nodejs/package.json
@@ -31,6 +31,6 @@
   "license": "UNLICENSED",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "langbase": "workspace:*"
+    "langbase": "^1.1.3"
   }
 }
