📦 NEW: Memory endpoints support (#76)
* 📦 NEW: Memory endpoints support

* 👌 IMPROVE: Code

* 👌 IMPROVE: Code

--- a/examples/nodejs/package.json
+++ b/examples/nodejs/package.json
@@ -8,8 +8,14 @@
   "scripts": {
     "generate-text": "npx tsx ./examples/pipes/generate-text.ts",
     "pipe.create": "npx tsx ./examples/pipes/pipe.create.ts",
-    "memory.create": "npx tsx ./examples/pipes/memory.create.ts",
-    "memory.list": "npx tsx ./examples/pipes/memory.list.ts",
+    "memory.create": "npx tsx ./examples/memory/memory.create.ts",
+    "memory.list": "npx tsx ./examples/memory/memory.list.ts",
+    "memory.delete": "npx tsx ./examples/memory/memory.delete.ts",
+    "memory.retrieve": "npx tsx ./examples/memory/memory.retrieve.ts",
+    "memory.docs.list": "npx tsx ./examples/memory/memory.docs.list.ts",
+    "memory.docs.delete": "npx tsx ./examples/memory/memory.docs.delete.ts",
+    "memory.docs.upload": "npx tsx ./examples/memory/memory.docs.upload.ts",
+    "memory.docs.retry-embed": "npx tsx ./examples/memory/memory.docs.retry-embed.ts",
     "pipe.update": "npx tsx ./examples/pipes/pipe.update.ts",
     "pipe.list": "npx tsx ./examples/pipes/pipe.list.ts",
     "pipe.run": "npx tsx ./examples/pipes/pipe.run.ts",
