--- a/examples/nodejs/package.json
+++ b/examples/nodejs/package.json
@@ -30,7 +30,8 @@
     "stream-text-chat-pipe": "npx tsx ./examples/pipes/stream-text-chat-pipe.ts",
     "tools.web-search": "npx tsx ./examples/tools/web-search.ts",
     "tools.crawl": "npx tsx ./examples/tools/crawl.ts",
-    "embed": "npx tsx ./examples/embed/index.ts"
+    "embed": "npx tsx ./examples/embed/index.ts",
+    "chunk": "npx tsx ./examples/chunk/index.ts"
   },
   "keywords": [],
   "author": "Ahmad Awais <me@AhmadAwais.com> (https://twitter.com/MrAhmadAwais)",
