--- a/examples/nodejs/package.json
+++ b/examples/nodejs/package.json
@@ -31,7 +31,8 @@
     "tools.web-search": "npx tsx ./examples/tools/web-search.ts",
     "tools.crawl": "npx tsx ./examples/tools/crawl.ts",
     "embed": "npx tsx ./examples/embed/index.ts",
-    "chunk": "npx tsx ./examples/chunk/index.ts"
+    "chunk": "npx tsx ./examples/chunk/index.ts",
+    "parse": "npx tsx ./examples/parse/index.ts"
   },
   "keywords": [],
   "author": "Ahmad Awais <me@AhmadAwais.com> (https://twitter.com/MrAhmadAwais)",
