--- a/examples/nodejs/package.json
+++ b/examples/nodejs/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "langbase": "^1.1.35",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "@langbase/cli": "workspace:*"
   }
 }
