👌 IMPROVE: bin command

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -8,6 +8,7 @@
 	"module": "./dist/index.mjs",
 	"types": "./dist/index.d.ts",
 	"bin": {
+		"langbase": "dist/index.js",
 		"lb": "dist/index.js"
 	},
 	"author": {
