--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -96,6 +96,9 @@
 		"typescript": "^5.6.2",
 		"vitest": "1.6.0"
 	},
+	"publishConfig": {
+		"access": "public"
+	},
 	"keywords": [
 		"langbase",
 		"langbase CLI",
