--- a/examples/nodejs/package.json
+++ b/examples/nodejs/package.json
@@ -34,7 +34,8 @@
     "threads.delete": "npx tsx ./examples/threads/threads.delete.ts",
     "threads.append": "npx tsx ./examples/threads/threads.append.ts",
     "threads.messages.list": "npx tsx ./examples/threads/threads.messages.list.ts",
-    "threads.get": "npx tsx ./examples/threads/threads.get.ts"
+    "threads.get": "npx tsx ./examples/threads/threads.get.ts",
+    "workflows": "npx tsx ./examples/workflows/workflows.ts"
   },
   "keywords": [],
   "author": "Ahmad Awais <me@AhmadAwais.com> (https://twitter.com/MrAhmadAwais)",
