🐛 FIX: package.json

--- a/examples/nodejs/package.json
+++ b/examples/nodejs/package.json
@@ -13,6 +13,12 @@
     "memory.list": "npx tsx ./examples/memory/memory.list.ts",
     "memory.delete": "npx tsx ./examples/memory/memory.delete.ts",
     "memory.retrieve": "npx tsx ./examples/memory/memory.retrieve.ts",
+    "memory.retrieve.filters.In": "npx tsx ./examples/memory/memory.retrieve.filters.In.ts",
+    "memory.retrieve.filters.NotIn": "npx tsx ./examples/memory/memory.retrieve.filters.NotIn.ts",
+    "memory.retrieve.filters.Eq": "npx tsx ./examples/memory/memory.retrieve.filters.Eq.ts",
+    "memory.retrieve.filters.NotEq": "npx tsx ./examples/memory/memory.retrieve.filters.NotEq.ts",
+    "memory.retrieve.filters.Or": "npx tsx ./examples/memory/memory.retrieve.filters.Or.ts",
+    "memory.retrieve.filters.And": "npx tsx ./examples/memory/memory.retrieve.filters.And.ts",
     "memory.docs.list": "npx tsx ./examples/memory/memory.docs.list.ts",
     "memory.docs.delete": "npx tsx ./examples/memory/memory.docs.delete.ts",
     "memory.docs.upload": "npx tsx ./examples/memory/memory.docs.upload.ts",
