--- a/examples/nodejs/package.json
+++ b/examples/nodejs/package.json
@@ -18,7 +18,7 @@
     "memory.retrieve.filters.Eq": "npx tsx ./examples/memory/memory.retrieve.filters.Eq.ts",
     "memory.retrieve.filters.NotEq": "npx tsx ./examples/memory/memory.retrieve.filters.NotEq.ts",
     "memory.retrieve.filters.Or": "npx tsx ./examples/memory/memory.retrieve.filters.Or.ts",
-    "memory.retrieve.filters.And": "npx tsx ./examples/memory/memory.retrieve.filters.And.ts",
+    "memory.retrieve.filters.advanced": "npx tsx ./examples/memory/memory.retrieve.filters.advanced.ts",
     "memory.docs.list": "npx tsx ./examples/memory/memory.docs.list.ts",
     "memory.docs.delete": "npx tsx ./examples/memory/memory.docs.delete.ts",
     "memory.docs.upload": "npx tsx ./examples/memory/memory.docs.upload.ts",
