--- a/examples/nodejs/package.json
+++ b/examples/nodejs/package.json
@@ -1,55 +1,55 @@
 {
-  "private": true,
-  "name": "everything",
-  "version": "0.0.0",
-  "description": "Everything example",
-  "type": "module",
-  "main": "index.js",
-  "scripts": {
-    "pipe.create": "npx tsx ./examples/pipes/pipe.create.ts",
-    "pipe.run.chat": "npx tsx ./examples/pipes/pipe.run.chat.ts",
-    "pipe.run.stream.chat": "npx tsx ./examples/pipes/pipe.run.stream.chat.ts",
-    "memory.create": "npx tsx ./examples/memory/memory.create.ts",
-    "memory.list": "npx tsx ./examples/memory/memory.list.ts",
-    "memory.delete": "npx tsx ./examples/memory/memory.delete.ts",
-    "memory.retrieve": "npx tsx ./examples/memory/memory.retrieve.ts",
-    "memory.retrieve.filters.In": "npx tsx ./examples/memory/memory.retrieve.filters.In.ts",
-    "memory.retrieve.filters.NotIn": "npx tsx ./examples/memory/memory.retrieve.filters.NotIn.ts",
-    "memory.retrieve.filters.Eq": "npx tsx ./examples/memory/memory.retrieve.filters.Eq.ts",
-    "memory.retrieve.filters.NotEq": "npx tsx ./examples/memory/memory.retrieve.filters.NotEq.ts",
-    "memory.retrieve.filters.Or": "npx tsx ./examples/memory/memory.retrieve.filters.Or.ts",
-    "memory.retrieve.filters.advanced": "npx tsx ./examples/memory/memory.retrieve.filters.advanced.ts",
-    "memory.docs.list": "npx tsx ./examples/memory/memory.docs.list.ts",
-    "memory.docs.delete": "npx tsx ./examples/memory/memory.docs.delete.ts",
-    "memory.docs.upload": "npx tsx ./examples/memory/memory.docs.upload.ts",
-    "memory.docs.retry-embed": "npx tsx ./examples/memory/memory.docs.retry-embed.ts",
-    "pipe.update": "npx tsx ./examples/pipes/pipe.update.ts",
-    "pipe.list": "npx tsx ./examples/pipes/pipe.list.ts",
-    "pipe.run": "npx tsx ./examples/pipes/pipe.run.ts",
-    "pipe.tool": "npx tsx ./examples/pipes/pipe.tool.ts",
-    "pipe.tool.stream": "npx tsx ./examples/pipes/pipe.tool.stream.ts",
-    "pipe.run.stream": "npx tsx ./examples/pipes/pipe.run.stream.ts",
-    "pipe.run.stream.llmkey": "npx tsx ./examples/pipes/pipe.run.stream.llmkey.ts",
-    "tools.web-search": "npx tsx ./examples/tools/web-search.ts",
-    "tools.crawl": "npx tsx ./examples/tools/crawl.ts",
-    "embed": "npx tsx ./examples/embed/index.ts",
-    "chunk": "npx tsx ./examples/chunk/index.ts",
-    "parse": "npx tsx ./examples/parse/index.ts",
-    "threads.create": "npx tsx ./examples/threads/threads.create.ts",
-    "threads.update": "npx tsx ./examples/threads/threads.update.ts",
-    "threads.delete": "npx tsx ./examples/threads/threads.delete.ts",
-    "threads.append": "npx tsx ./examples/threads/threads.append.ts",
-    "threads.messages.list": "npx tsx ./examples/threads/threads.messages.list.ts",
-    "threads.get": "npx tsx ./examples/threads/threads.get.ts",
-    "workflow": "npx tsx ./examples/workflows/workflows.ts"
-  },
-  "keywords": [],
-  "author": "Ahmad Awais <me@AhmadAwais.com> (https://twitter.com/MrAhmadAwais)",
-  "license": "UNLICENSED",
-  "dependencies": {
-    "@langbase/cli": "workspace:*",
-    "dotenv": "^16.4.5",
-    "langbase": "1.1.51",
-    "uuid": "^11.1.0"
-  }
+	"private": true,
+	"name": "everything",
+	"version": "0.0.0",
+	"description": "Everything example",
+	"type": "module",
+	"main": "index.js",
+	"scripts": {
+		"pipe.create": "npx tsx ./pipes/pipe.create.ts",
+		"pipe.run.chat": "npx tsx ./pipes/pipe.run.chat.ts",
+		"pipe.run.stream.chat": "npx tsx ./pipes/pipe.run.stream.chat.ts",
+		"memory.create": "npx tsx ./memory/memory.create.ts",
+		"memory.list": "npx tsx ./memory/memory.list.ts",
+		"memory.delete": "npx tsx ./memory/memory.delete.ts",
+		"memory.retrieve": "npx tsx ./memory/memory.retrieve.ts",
+		"memory.retrieve.filters.In": "npx tsx ./memory/memory.retrieve.filters.In.ts",
+		"memory.retrieve.filters.NotIn": "npx tsx ./memory/memory.retrieve.filters.NotIn.ts",
+		"memory.retrieve.filters.Eq": "npx tsx ./memory/memory.retrieve.filters.Eq.ts",
+		"memory.retrieve.filters.NotEq": "npx tsx ./memory/memory.retrieve.filters.NotEq.ts",
+		"memory.retrieve.filters.Or": "npx tsx ./memory/memory.retrieve.filters.Or.ts",
+		"memory.retrieve.filters.advanced": "npx tsx ./memory/memory.retrieve.filters.advanced.ts",
+		"memory.docs.list": "npx tsx ./memory/memory.docs.list.ts",
+		"memory.docs.delete": "npx tsx ./memory/memory.docs.delete.ts",
+		"memory.docs.upload": "npx tsx ./memory/memory.docs.upload.ts",
+		"memory.docs.retry-embed": "npx tsx ./memory/memory.docs.retry-embed.ts",
+		"pipe.update": "npx tsx ./pipes/pipe.update.ts",
+		"pipe.list": "npx tsx ./pipes/pipe.list.ts",
+		"pipe.run": "npx tsx ./pipes/pipe.run.ts",
+		"pipe.tool": "npx tsx ./pipes/pipe.tool.ts",
+		"pipe.tool.stream": "npx tsx ./pipes/pipe.tool.stream.ts",
+		"pipe.run.stream": "npx tsx ./pipes/pipe.run.stream.ts",
+		"pipe.run.stream.llmkey": "npx tsx ./pipes/pipe.run.stream.llmkey.ts",
+		"tools.web-search": "npx tsx ./tools/web-search.ts",
+		"tools.crawl": "npx tsx ./tools/crawl.ts",
+		"embed": "npx tsx ./embed/index.ts",
+		"chunk": "npx tsx ./chunk/index.ts",
+		"parse": "npx tsx ./parse/index.ts",
+		"threads.create": "npx tsx ./threads/threads.create.ts",
+		"threads.update": "npx tsx ./threads/threads.update.ts",
+		"threads.delete": "npx tsx ./threads/threads.delete.ts",
+		"threads.append": "npx tsx ./threads/threads.append.ts",
+		"threads.messages.list": "npx tsx ./threads/threads.messages.list.ts",
+		"threads.get": "npx tsx ./threads/threads.get.ts",
+		"workflow": "npx tsx ./workflows/workflows.ts"
+	},
+	"keywords": [],
+	"author": "Ahmad Awais <me@AhmadAwais.com> (https://twitter.com/MrAhmadAwais)",
+	"license": "UNLICENSED",
+	"dependencies": {
+		"@langbase/cli": "workspace:*",
+		"dotenv": "^16.4.5",
+		"langbase": "1.1.51",
+		"uuid": "^11.1.0"
+	}
 }
