--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -51,6 +51,7 @@
 		"@clack/prompts": "^0.7.0",
 		"@hono/node-server": "^1.13.1",
 		"@hono/zod-openapi": "^0.16.0",
+		"@modelcontextprotocol/sdk": "^1.8.0",
 		"@sindresorhus/slugify": "^2.2.1",
 		"camelcase": "^8.0.0",
 		"chalk": "^5.3.0",
@@ -71,6 +72,7 @@
 		"get-package-json-file": "^2.0.0",
 		"hono": "^4.5.11",
 		"js-tiktoken": "^1.0.14",
+		"jsdom": "^24.1.0",
 		"log-symbols": "^7.0.0",
 		"lowdb": "^7.0.1",
 		"meow": "^13.2.0",
