--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -92,6 +92,7 @@
 	"devDependencies": {
 		"@langbase/eslint-config": "workspace:*",
 		"@langbase/tsconfig": "workspace:*",
+		"@types/jsdom": "^21.1.7",
 		"@types/node": "^22.6.1",
 		"tsup": "^8.3.0",
 		"tsx": "^4.19.1",
