📦 NEW: Parser and chunker functions

--- a/examples/nodejs/package.json
+++ b/examples/nodejs/package.json
@@ -34,8 +34,8 @@
     "tools.web-search": "npx tsx ./tools/web-search.ts",
     "tools.crawl": "npx tsx ./tools/crawl.ts",
     "embed": "npx tsx ./embed/index.ts",
-    "chunk": "npx tsx ./chunk/index.ts",
-    "parse": "npx tsx ./parse/index.ts",
+    "chunker": "npx tsx ./chunker/index.ts",
+    "parser": "npx tsx ./parser/index.ts",
     "threads.create": "npx tsx ./threads/threads.create.ts",
     "threads.update": "npx tsx ./threads/threads.update.ts",
     "threads.delete": "npx tsx ./threads/threads.delete.ts",
