--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
     - name: Ask a Question
-      url: https://github.com/LangbaseInc/langbase/discussions
-      about: Please ask your questions in our discussions forum.
+      url: https://discord.com/invite/qz6VsMtvXU
+      about: Please ask your questions in our discord forum.
