--- a/.github/ISSUE_TEMPLATE/2.feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/2.feature_request.yml
@@ -5,7 +5,7 @@ body:
     - type: markdown
       attributes:
           value: |
-              Use this template to propose new features for Langbase. If you need help with your own project, feel free to [start a new thread in our discord forum](https://discord.com/invite/qz6VsMtvXU).
+              Use this template to propose new features for Langbase. If you need help with your own project, feel free to [start a new thread in our discord forum](https://langbase.com/discord).
     - type: textarea
       attributes:
           label: Feature Description
