--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
     - name: Ask a Question
-      url: https://discord.com/invite/qz6VsMtvXU
+      url: https://langbase.com/discord
       about: Please ask your questions in our discord forum.
