📦 NEW: Images Primitive

--- a/examples/nodejs/.env.example
+++ b/examples/nodejs/.env.example
@@ -7,3 +7,13 @@ LANGBASE_API_KEY=""
 EXA_API_KEY=""
 CRAWL_KEY=""
 FIRECRAWL_KEY=""
+
+# Image generation API keys
+# https://platform.openai.com/api-keys
+OPENAI_API_KEY=""
+# https://console.cloud.google.com/apis/credentials
+GOOGLE_API_KEY=""
+# https://api.together.xyz/settings/api-keys
+TOGETHER_API_KEY=""
+# https://openrouter.ai/keys
+OPENROUTER_API_KEY=""
