--- a/packages/langbase/package.json
+++ b/packages/langbase/package.json
@@ -7,7 +7,8 @@
 	"module": "./dist/index.mjs",
 	"types": "./dist/index.d.ts",
 	"bin": {
-		"langbase": "./dist/cli/cli.js"
+		"langbase": "./dist/cli/cli.js",
+		"lb": "./dist/cli/cli.js"
 	},
 	"files": [
 		"dist/**",
@@ -15,13 +16,18 @@
 	],
 	"scripts": {
 		"build": "tsup --config tsup.config.ts --format esm,cjs --dts --external react",
+		"build:cli": "tsup --config tsup.config.ts --entry.cli src/cli/cli.ts",
 		"dev": "tsup --config tsup.config.ts --format esm,cjs --watch --dts --external react",
 		"xdev": "tsup --watch",
 		"lint": "eslint \"src/**/*.ts*\"",
 		"clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
-		"type-check": "tsc --noEmit",
+		"type-check": "tsc --noEmit && tsc --project tsconfig.cli.json --noEmit",
+		"type-check:sdk": "tsc --noEmit",
+		"type-check:cli": "tsc --project tsconfig.cli.json --noEmit",
 		"prettier-check": "prettier --check \"./**/*.ts*\"",
-		"test": "pnpm test:node && pnpm test:edge",
+		"test": "pnpm test:sdk && pnpm test:cli",
+		"test:sdk": "pnpm test:node && pnpm test:edge",
+		"test:cli": "vitest --config vitest.cli.config.js --run",
 		"#test": "pnpm test:node && pnpm test:edge && pnpm test:ui && pnpm test:e2e",
 		"test:edge": "vitest --config vitest.edge.config.js --run",
 		"test:node": "vitest --config vitest.node.config.js --run",
@@ -30,9 +36,11 @@
 		"test:e2e": "playwright test",
 		"test:edge:watch": "vitest --config vitest.edge.config.js",
 		"test:node:watch": "vitest --config vitest.node.config.js",
+		"test:cli:watch": "vitest --config vitest.cli.config.js",
 		"test:ui:react:watch": "vitest --config vitest.ui.react.config.js"
 	},
 	"dependencies": {
+		"commander": "^14.0.2",
 		"dotenv": "^16.4.5",
 		"openai": "^4.82.0",
 		"zod": "^3.23.8",
