--- a/packages/langbase/tsconfig.json
+++ b/packages/langbase/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"extends": "./node_modules/@langbase/tsconfig/react-library.json",
 	"include": ["."],
-	"exclude": ["*/dist", "dist", "build", "node_modules"],
+	"exclude": ["*/dist", "dist", "build", "node_modules", "src/cli"],
 	"compilerOptions": {
 		"target": "ES2018",
 		"stripInternal": true,
