--- a/packages/langbase/package.json
+++ b/packages/langbase/package.json
@@ -37,7 +37,8 @@
 		"test:edge:watch": "vitest --config vitest.edge.config.js",
 		"test:node:watch": "vitest --config vitest.node.config.js",
 		"test:cli:watch": "vitest --config vitest.cli.config.js",
-		"test:ui:react:watch": "vitest --config vitest.ui.react.config.js"
+		"test:ui:react:watch": "vitest --config vitest.ui.react.config.js",
+		"cleanup:test": "tsx scripts/cleanup-test-resources.ts"
 	},
 	"dependencies": {
 		"commander": "^14.0.2",
